style.css
html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

.navbar {
    display: flex;
    padding: 15px;
    font-family: "Jersey 20", sans-serif;
    font-size: large;
}

#nav-name {
    text-align: left;
    font-family: "Jersey 20", sans-serif;
    margin-left: 10%;
    margin-right: 30%;
    padding-left: 50px;
    color: grey;
    padding: 10px;
    list-style: none;
}

#nav-name:hover {
    color: black;
    transition-duration: 0.5s;
}

a {
    color: black;
    font-family: "Jersey 20", sans-serif;
    list-style: none;
    text-decoration: none;
    text-decoration-color: white;
}

a:hover {
    text-decoration: underline;
    text-decoration-color: black;
    text-underline-offset: 10px;
    transition-duration: 0.5s;
}

#nav-about,
#nav-skills,
#nav-experience,
#nav-projects {
    padding: 5px;
    margin: auto 50px auto 10px;
    list-style: none;
    text-decoration: none;
    text-decoration-color: white;
}

.intro {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    height: 100vh;
}

#intro-profilepicture>img {
    width: 400px;
    height: 400px;
    border: 2px solid grey;
    border-radius: 30%;
    margin: 100px;
    position: relative;
}

.intro-summary {
    display: flex;
    flex-direction: column;
    font-family: "Crimson Text", serif;
    font-size: 20px;
    margin: 100px;
}

#intro-summary-heading {
    font-size: 50px;
    font-family: "Chakra Petch", sans-serif;
}

#summary {
    font-weight: bold;
}

#summary:hover {
    font-weight: bolder;
    color: green;
    text-decoration: underline;
    transition-duration: 0.5s;
    text-underline-offset: 0.5rem;
}

#intro-summary-content-1,
#intro-summary-content-2 {
    text-align: justify;
}

.contacts {
    display: flex;
    justify-content: flex-start;
    font-family: "Crimson Text", serif;
}

#linkedin {
    display: block;
    width: 30px;
    height: 30px;
    padding-right: 30px;
}

#github {
    display: block;
    width: 30px;
    height: 30px;
    padding-right: 30px;
}

/* .contacts > button{
    display: block;
    width: auto;
    height: auto;
    background-color: grey;
    color: white;
    border: 1px solid black;
    border-radius: 10px;
} */

#skills-heading {
    text-align: center;
    font-family: "Chakra Petch", sans-serif;
    padding: 30px 0 10px 0;
}

.skill-set {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.skill-set {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.webdevheadings {
    font-size: 25px;
    text-decoration: underline;
    text-underline-offset: 0.3rem;
    text-align: center;
}

.webdev {
    margin: 20px auto 20px auto;
    font-size: 20px;
    border-radius: 15px;
    font-family: "Crimson Text", serif;
    border: 1px solid black;
    padding: 20px 150px 20px 150px;
}

.webdev:hover {
    border: 4px solid black;
    border-radius: 15px;
    transition-duration: 0.5s;
}

.blockchainheadings {
    font-size: 25px;
    text-decoration: underline;
    text-underline-offset: 0.3rem;
    text-align: center;
}

.blockchain {
    margin: 20px auto 20px auto;
    font-size: 20px;
    border-radius: 15px;
    font-family: "Crimson Text", serif;
    border: 1px solid black;
    padding: 20px 150px 20px 150px;
}

.blockchain:hover {
    border: 4px solid black;
    border-radius: 15px;
    transition-duration: 0.5s;
}

.icon-items {
    display: flex;
}

.icon {
    display: block;
    width: 20px;
    height: 20px;
    padding: 23px 10px 10px 10px;
}

.icon-content {
    text-align: left;
}

#workexperience-heading {
    text-align: center;
    font-family: "Chakra Petch", sans-serif;
    padding: 30px 0 10px 0;
}

.timeline {
    position: relative;
    max-width: 1200px;
    margin: 15px 100px 15px 100px;
    font-family: "Crimson Text", serif;
}

.workexperience {
    position: relative;
    width: 45%;
    padding: 10px 50px;
}

.company {
    font-size: 20px;
    padding: 20px 30px;
    position: relative;
}

.company > h2 {
    font-family: "Chakra Petch", sans-serif;
}

.company > ul {
    text-align: justify;
    list-style: square;
}

.company > small {
    text-decoration: underline;
    text-underline-offset: 0.5rem;
}

.left {
    left: 0;
}

.right {
    left: 50%;
}

.timeline::after{
    content: '';
    position: absolute;
    width: 3px;
    height: 100%;
    background-color: grey;
    top: 0;
    left: 50%;
    margin-left: -3px;
    z-index: -1;
}

#projects-heading {
    text-align: center;
    font-family: "Chakra Petch", sans-serif;
    padding: 30px 0 10px 0;
}

.projects {
    position: relative;
    width: 90%;
    font-family: "Crimson Text", serif;
    text-align: justify;
    padding: 10px 10px 10px 10px;
}

.project {
    font-size: 20px;
    margin-left: 10%;
    position: relative;
}

.project > h2{
    font-family: "Chakra Petch", sans-serif;
}

.project > ul{
    list-style: square;
}

footer {
    text-align: center;
    display: flex;
    justify-content: center;
    margin: auto;
    background-color: grey;
    color: white;
}

@media screen and (max-width: 375px) {
    .intro {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        height: 100vh;
    }
}

